--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -43,10 +43,11 @@ page-login {
        background: #8bdcf9;
        border-radius: 30px !important;
        border: 1px solid #ffffff;
+       color:#000000;
      }
  
      .register-btn {
-       color: #ffffff;
+       color: #000000;
        font-size: 0.8em;
      }
   }
