--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,8 @@
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
+
+       <ion-item>Logout</ion-item>
     </ion-list>
   </ion-content>
 
