Log out from sidemenu working.
Need to extend functionality to hide sidemenu / close side menu after logging out.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,7 +11,7 @@
         {{p.title}}
       </button>
 
-       <ion-item>Logout</ion-item>
+       <ion-item (click)="logout()">Logout</ion-item>
     </ion-list>
   </ion-content>
 
