--- a/src/pages/workout-plan/workout-plan.scss
+++ b/src/pages/workout-plan/workout-plan.scss
@@ -1,3 +1,12 @@
 page-workout-plan {
+	label{
+		font-weight: bold;
+	}
 
+	.displayItem{
+		border: 1px solid #ddd; /*border*/
+  		margin-top: -1px; /*margin*/
+ 		background-color: #f6f6f6; /*background colour*/
+  		padding: 12px; /*padding*/
+	}
 }
