--- a/src/pages/workout-detail/workout-detail.scss
+++ b/src/pages/workout-detail/workout-detail.scss
@@ -1,3 +1,38 @@
 page-workout-detail {
 
+	.circleBtn{
+	  height: 130px;
+	  width: 130px;
+	  border-radius: 50%;
+	  display: inline-block;
+	  text-align: center;
+	}
+
+	#start:hover{
+		color: green;
+		background-color: white;
+		border-color: green;
+		border-width: 0.5px;
+		border: solid;
+	}
+
+	#log:hover{
+		color: #378FF8;
+		background-color: white;
+		border-color: #378FF8;
+		border-width: 0.5px;
+		border: solid;
+	}
+
+	#start{
+		background-color: green;
+	}
+
+	#log{
+		text-align:center;
+	}
+	
+	#buttons{
+		display: inline-block;
+	}
 }
