--- a/src/pages/workout-start/workout-start.scss
+++ b/src/pages/workout-start/workout-start.scss
@@ -1,3 +1,33 @@
 page-workout-start {
 
+	#input{
+		width: 40%;
+		display: inline-block;
+
+	}
+
+
+	.circleBtn{
+	  height: 130px;
+	  width: 130px;
+	  border-radius: 50%;
+	  display: inline-block;
+	  text-align: center;
+	}
+
+
+	#repCounter:hover{
+		color: #378FF8;
+		background-color: white;
+		border-color: #378FF8;
+		border-width: 0.5px;
+		border: solid;
+	}
+
+
+
+	#repCounter{
+		text-align:center;
+	}
+
 }
