Saving basic workout detail to firebase, needs moved to end of workout slider.

--- a/src/pages/workout-start/workout-start.scss
+++ b/src/pages/workout-start/workout-start.scss
@@ -30,4 +30,12 @@ page-workout-start {
 		text-align:center;
 	}
 
+	#showWeightInput{
+		background-color: grey;
+	}
+
+	#weight{
+		width: 15%;
+		display: inline-block;
+	}
 }
