Added logo files.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,6 +13,10 @@
 
        <ion-item (click)="logout()">Logout</ion-item>
     </ion-list>
+
+    <img alt="logo" height="40"   src="img/LogoNoTaglineSmall.png" > 
+
+
   </ion-content>
 
 
