Pulling back historic workout data, includign count of workouts, last workout and then also all workouts (name + date)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,8 +14,7 @@
        <ion-item (click)="logout()">Logout</ion-item>
     </ion-list>
 
-    <img alt="logo" height="40"   src="img/LogoNoTaglineSmall.png" > 
-
+    <img alt="logo" height="120" src="/assets/imgs/LogoNoTaglineSmall.png" > 
 
   </ion-content>
 
