--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -31,4 +31,9 @@ page-login {
     @include call-to-action-button-styles(color($colors, google, base), color($colors, google, contrast));
   }
 
+  #logoImg{
+    height:30%;
+    width:24%; 
+  }
+
 }
