--- a/src/pages/workout-detail/workout-detail.scss
+++ b/src/pages/workout-detail/workout-detail.scss
@@ -32,4 +32,11 @@ page-workout-detail {
 		text-align:center;
 	}
 
+	#displayItem{
+		border: 1px solid #ddd; /*border*/
+  		margin-top: -1px; /*margin*/
+ 		background-color: #f6f6f6; /*background colour*/
+  		padding: 12px; /*padding*/
+	}
+
 }
