--- a/src/pages/workout-history/workout-history.scss
+++ b/src/pages/workout-history/workout-history.scss
@@ -1,3 +1,10 @@
 page-workout-history {
 
+	#displayItem{
+		border: 1px solid #ddd; /*border*/
+  		margin-top: -1px; /*margin*/
+ 		background-color: #f6f6f6; /*background colour*/
+  		padding: 12px; /*padding*/
+	}
+
 }
