--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,6 +3,11 @@ page-login {
     @include header-styles(color($colors, header, base), color($colors, header, contrast));
   }
   
+  h3, h4{
+    text-align: center;
+    color: grey;
+  }
+
   .error-message{
    color: red;
   }
