--- a/src/pages/goals/goals.scss
+++ b/src/pages/goals/goals.scss
@@ -1,3 +1,13 @@
 page-goals {
 
+	.activeTile{
+		border: solid;
+		border-width: 1px;
+		margin-left: 2%;
+		margin-right: 2%;
+		background-color: #629632;
+		color: white;
+		text-indent: 2%;
+	}
+
 }
