--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,27 @@
 page-home {
 
-.tile{
-  background-color: #AED6F1;  
+  .tile{
+    background-color: #AED6F1;  
+  }
+
+
+  .checked {
+      color: orange;
+  }
+.ios, .md {
+
+    page-home {
+
+        .scroll-content {
+            background-color: map-get($colors, light);
+        }
+
+        ion-card-header {
+            font-weight: bold;
+        }
+
+    }
+
 }
 
 @supports (column-count: 5) {
