--- a/src/pages/workout-plan/workout-plan.scss
+++ b/src/pages/workout-plan/workout-plan.scss
@@ -9,4 +9,16 @@ page-workout-plan {
  		background-color: #f6f6f6; /*background colour*/
   		padding: 12px; /*padding*/
 	}
+
+
+	.cardTop{
+   		border-top: 4px solid #558bf7;
+	}
+
+	.center{
+		text-align: center;
+		display: block;
+	    margin-left: auto;
+	    margin-right: auto
+	}
 }
