--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,14 +1,27 @@
 page-home {
 
+  ion-card{
+    border-top: 4px solid #558bf7;;
+  }
+
+  .bigger{
+    font-size: 30px;
+  }
+
+  img{
+    height: 15%;
+    width: 15%;
+  }
+
   .tile{
     background-color: #AED6F1;  
   }
 
-
   .checked {
       color: orange;
   }
-.ios, .md {
+
+  .ios, .md {
 
     page-home {
 
@@ -22,7 +35,7 @@ page-home {
 
     }
 
-}
+  }
 
 @supports (column-count: 5) {
    .wrapper {
@@ -95,5 +108,6 @@ page-home {
       }
    }
 }
+
 
 }
