--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,12 +11,13 @@
         {{p.title}}
       </button>
 
-       <ion-item (click)="logout()">Logout</ion-item>
+       <ion-item menuClose (click)="logout()">Logout</ion-item>
     </ion-list>
 
     <img alt="logo" height="120" src="/assets/imgs/LogoNoTaglineSmall.png" > 
 
   </ion-content>
+  
 
 
 </ion-menu>
