--- a/src/pages/goal-graphed/goal-graphed.scss
+++ b/src/pages/goal-graphed/goal-graphed.scss
@@ -1,5 +1,9 @@
 page-goal-graphed {
 
+  ion-card{
+    border-top: 4px solid #558bf7;;
+  }
+
         .scroll-content {
             background-color: map-get($colors, light);
         }
