--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
        <ion-item menuClose (click)="logout()">Logout</ion-item>
     </ion-list>
 
-    <img alt="logo" height="120" src="/assets/imgs/LogoNoTaglineSmall.png" > 
+    <img id='logoMenu' alt="logo" src="/assets/imgs/Logo.png" > 
 
   </ion-content>
   
