--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,7 +15,7 @@ page-home {
   }
 
   .notAchievedBadge{
-    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+    -webkit-filter: blur(5px); 
     filter: blur(5px);
     height: 25%;
     width: 25%;
