--- a/src/pages/goals/goals.scss
+++ b/src/pages/goals/goals.scss
@@ -32,83 +32,47 @@ body {
 }
 
 .tag {
-  /*background: #eee;*/
-  border-radius: 3px 0 0 3px;
-  /*color: #999;*/
-  color: black;
-  display: inline-block;
-  height: 26px;
-  line-height: 26px;
-  padding: 0 20px 0 23px;
-  position: relative;
-  margin: 0 10px 10px 0;
-  text-decoration: none;
-  -webkit-transition: color 0.2s;
+  border-radius: 3px 0 0 3px; color: black;
+  display: inline-block; margin: 0 10px 10px 0;
+  height: 26px; line-height: 26px;
+  padding: 0 20px 0 23px; position: relative;
+  text-decoration: none; -webkit-transition: color 0.2s;
 }
 
-#tagActive{
-	background-color:  #F8BE39;
-}
-
-#tagInactive, #tagInactive::after{
-	background-color:  #78D26A;
+.tag:hover {
+  color: white;
 }
 
 .tag::before {
   background: #fff;
   border-radius: 10px;
   box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-  content: '';
-  height: 6px;
-  left: 10px;
-  position: absolute;
-  width: 6px;
-  top: 10px;
-}
-
-
-#tagActive::after{
-  background: #fff;
-}
-
-#tagInactive::after{
-  background: #fff;
-}
-
-
-#tagActive{
-	background-color:  #F8BE39;
-}
-
-#tagInactive{
-	background-color:  #78D26A;
-}
-
-#tagActive::after{
-	border-left: 10px solid #F8BE39;
-
-}
-
-#tagInactive::after{
-  border-left: 10px solid #78D26A;
-
+  content: ''; position: absolute;
+  height: 6px; left: 10px; width: 6px; top: 10px;
 }
 
 .tag::after {
   border-bottom: 13px solid transparent;
   border-top: 13px solid transparent;
   content: '';
-  position: absolute;
-  right: 0;
-  top: 0;
+  position: absolute; right: 0; top: 0;
 }
 
-.tag:hover {
-  background-color: crimson;
-  color: white;
+#tagActive{
+  background-color:  #F8BE39;
 }
 
-.tag:hover::after {
-   border-left-color: crimson; 
+#tagInactive, #tagInactive::after{
+  background-color:  #78D26A;
 }
+
+#tagActive::after{
+  background: #fff; border-left: 10px solid #F8BE39;
+}
+
+#tagInactive::after{
+  background: #fff; border-left: 10px solid #78D26A;
+}
+
+
 }
